--- a/.env
+++ b/.env
@@ -10,6 +10,8 @@ DB_DATABASE=storage/database.sqlite
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_CONNECTION=sync
+LOG_CHANNEL=single
+LOG_LEVEL=debug
 
 MAIL_MAILER=log
 MAIL_FROM_ADDRESS=noreply@courtreservation.ph
