--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "court-reservation/system",
     "description": "Philippine Court Reservation System",
     "require": {
-        "php": ">=7.4.0"
+        "php": ">=8.0",
+        "laravel/framework": "^11.0"
     },
     "autoload": {
         "psr-4": {
